# pharia-kernel-sdk-py

./: .env.example  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  mypy.ini  pyproject.toml  release-please-config.json
.github/: dependabot.yml
.github/workflows/: ci.yml  release-please.yml  test.yml
docs/: README.md
docs/_static/css/: my_theme.css
docs/source/: 01-introduction.md  02-quick_start.md  03-core_concepts.md  04-how_to.md  05-faq.md  05-llm_code_execution.md  06-faq.md  06-skill_templates.md  07-faq.md  agents.md  building.md  conf.py  core_concepts.md  faq.md  how_to.md  index.md  index.rst  introduction.md  modules.rst  pharia_skill.rst  pharia_skill_studio.rst  pharia_skill_testing.rst  quick_start.md  references.rst
examples/: brave_search.py  brave_search_test.py  chat.py  chat_haiku.py  chat_test.py  chat_with_tools.py  chat_with_tools_test.py  code.py  code_test.py  failing.py  failing_test.py  haiku.py  haiku_stream.py  haiku_stream_collect.py  haiku_stream_test.py  haiku_test.py  haiku_tracing_test.py  heidelberg.py  heidelberg_test.py  news_summarizer.py  news_summarizer_test.py  rag.py  rag_test.py  summarize.py  summarize_test.py  tool_call.py  tool_call_test.py  web_search.py  web_search_test.py
pharia_skill/: __init__.py  __main__.py  chat_session.py  cli.py  componentize-py.toml  csi.py  decorator.py  generate.py  message_stream.py  pharia_skill_cli.py  registry.py  skill.py  skill.wit  testing.py  wasi_csi.py
pharia_skill/bindings/: __init__.py
pharia_skill/bindings/exports/: __init__.py
pharia_skill/bindings/imports/: inference.py  streaming_output.py  tool.py
pharia_skill/csi/: __init__.py  chunking.py  csi.py  document_index.py  inference.py  inference_types.py  tool.py
pharia_skill/csi/inference/: __init__.py  inference.py  tool.py  types.py
pharia_skill/llama3/: __init__.py  assistant.py  chat.py  message.py  request.py  response.py  tool.py  tool_call.py
pharia_skill/message_stream/: __init__.py  agent.py  decorator.py  response.py  wit_response.py  wit_writer.py  writer.py
pharia_skill/skill/: __init__.py
pharia_skill/skill/exports/: __init__.py
pharia_skill/skill/imports/: csi.py
pharia_skill/stream/: chat_decorator.py  message_stream_decorator.py
pharia_skill/studio/: __init__.py  client.py  exporter.py  otlp_exporter.py  processor.py  span.py
pharia_skill/testing/: __init__.py  dev.py  exporter.py  server.py  stub.py  studio.py  tracing.py
pharia_skill/testing/dev/: __init__.py  chunking.py  client.py  csi.py  document_index.py  inference.py  language.py  streaming_output.py  tool.py
pharia_skill/testing/studio/: __init__.py  client.py  exporter.py
pharia_skill/wit/: chunking.wit  csi.wit  document-index.wit  inference.wit  language.wit  message-stream.wit  skill.wit  tool.wit
pharia_skill/wit/exports/: __init__.py  skill_handler.py
pharia_skill/wit/imports/: chunking.py  csi.py  document_index.py  inference.py
pharia_skill/wit_csi/: chunking.py  csi.py  document_index.py  inference.py  language.py  streaming_output.py  tool.py
scripts/: build_and_run_failing_skill.sh  build_and_run_skill.sh  metadata_skill.sh  run_bad_csi_input_skill.sh  run_failing_skill.sh  run_kernel.sh  run_skill.sh  run_streaming_skill.sh  run_streaming_skill_reasoning.sh
tests/: chat_session_test.py  cli_test.py  csi_test.py  decorator_test.py  pharia_skill_cli_test.py  testing_test.py
tests/csi/: csi_test.py  default_params_test.py  inference_test.py  tool_test.py  type_validation_test.py
tests/llama3/: assistant_test.py  chat_test.py  eval.json  eval.py  message_test.py  request_test.py  response_test.py  serialization_test.py  test_chat.py  test_message.py  tool_call_test.py  tool_test.py  validation_test.py
tests/message_stream/: writer_test.py
tests/skills/: bad_csi_input.py  chat_haiku.py  failing.py  haiku.py  http_haiku.py  language.py  rag_test.py  rechunk_test.py  search.py  streaming_haiku.py  streaming_haiku_chat.py  streaming_haiku_completion.py  streaming_reasoning.py  text_highlighting_test.py
tests/stream/: chat_decorator_test.py
tests/studio/: conftest.py  exporter_test.py  otlp_exporter_test.py  otlp_simple_integration_test.py  span_test.py  tracing_test.py
tests/testing/: conftest.py  dev_test.py  server_test.py  stub_test.py  studio_test.py  tracing_test.py
tests/testing/dev/: chunking_test.py  client_test.py  conftest.py  csi_test.py  document_index_test.py  inference_test.py  language_test.py  streaming_output_test.py  tool_test.py
tests/testing/studio/: exporter_test.py  span_test.py
wasi_wheels/: pydantic_core-2.33.2-cp312-cp312-wasi_0_0_0_wasm32.whl
