[tool.poetry]
name = "pharia-kernel-sdk-py"
version = "0.5.7"
description = ""
authors = [
    "Peter Barth <peter.barth@aleph-alpha.com>",
    "Markus Klein <markus.klein@aleph-alpha.com>",
    "Benjamin Brandt <benjamin.brandt@aleph-alpha.com>",
    "Daniel Tscherwinka <daniel.tscherwinka@aleph-alpha.com>",
    "Moritz Althaus <moritz.althaus@aleph-alpha.com>",
    "Jia Ho Lee <jiaho.lee@aleph-alpha.com>",
]
readme = "README.md"
packages = [{ include = "pharia_skill", format = ["sdist", "wheel"] }]

[tool.poetry.dependencies]
python = "^3.11"
pydantic-core = "2.14.5"
pydantic = "2.5.2"
requests = "^2.32.3"
python-dotenv = "^1.0.1"
componentize-py = "^0.16.0"
sphinx = "^8.1.3"
sphinx-rtd-theme = "^3.0.2"
opentelemetry-api = "^1.28.1"
opentelemetry-sdk = "^1.28.1"
opentelemetry-instrumentation = "^0.49b1"
opentelemetry-exporter-otlp = "^1.28.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
ruff = "^0.9.1"
mypy = "^1.13.0"
pre-commit = "^4.0.1"
pydoclint = "^0.6.0"
types-requests = "^2.32.0.20241016"
pyright = "^1.1.390"

[tool.poetry.scripts]
pharia-skill = "pharia_skill.cli:main"

[tool.poetry.extras]
docs = ["sphinx", "sphinx_rtd_theme"]

[tool.pytest.ini_options]
markers = ["kernel: marks tests that requires Pharia Kernel"]

[tool.ruff]
exclude = ["pharia_skill/wit"]
lint.extend-select = ["I"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
