[project]
name = "pharia-kernel-sdk-py"
version = "0.5.11"
description = ""
authors = [
    { name = "Peter Barth", email = "peter.barth@aleph-alpha.com" },
    { name = "Markus Klein", email = "markus.klein@aleph-alpha.com" },
    { name = "Benjamin Brandt", email = "benjamin.brandt@aleph-alpha.com" },
    { name = "Daniel Tscherwinka", email = "daniel.tscherwinka@aleph-alpha.com" },
    { name = "Moritz Althaus", email = "moritz.althaus@aleph-alpha.com" },
    { name = "Jia Ho Lee", email = "jiaho.lee@aleph-alpha.com" },
]
requires-python = "~=3.11"
readme = "README.md"
dependencies = [
    "pydantic-core==2.27.2",
    "pydantic==2.10.4",
    "requests>=2.32.3,<3",
    "python-dotenv>=1.0.1,<2",
    "componentize-py>=0.16.0,<0.17",
    "opentelemetry-sdk>=1.28.1,<2",
]

[project.scripts]
pharia-skill = "pharia_skill.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.3.4,<9",
    "ruff>=0.9.2,<0.10",
    "mypy>=1.13.0,<2",
    "pre-commit>=4.1.0,<5",
    "pydoclint>=0.6.0,<0.7",
    "types-requests>=2.32.0.20241016,<3",
    "pyright>=1.1.392,<2",
]
docs = [
    "sphinx-rtd-theme>=3.0.2,<4",
    "sphinx-design>=0.6.1,<0.7",
    "sphinx>=8.1.3,<9",
    "myst-parser>=4.0.0,<5",
    "sphinx-copybutton>=0.5.2",
]

[[tool.uv.index]]
name = "jfrog"
url = "https://alephalpha.jfrog.io/artifactory/api/pypi/python/simple"
publish-url = "https://alephalpha.jfrog.io/artifactory/api/pypi/pharia-kernel-pypi"

[tool.hatch.build.targets.sdist]
include = ["pharia_skill"]

[tool.hatch.build.targets.wheel]
include = ["pharia_skill"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
markers = ["kernel: marks tests that requires Pharia Kernel"]

[tool.ruff]
exclude = ["pharia_skill/wit"]
lint.extend-select = ["I"]
